@@ -6,9 +6,9 @@
 \description{The vertex connectivity of a graph or two vertices, this is
   recently also called group cohesion.}
 \usage{
-vertex.connectivity(graph, source=NULL, target=NULL)
+vertex.connectivity(graph, source=NULL, target=NULL, checks=TRUE)
 vertex.disjoint.paths(graph, source, target)
-graph.cohesion(graph)
+graph.cohesion(graph, checks=TRUE)
 }
 \arguments{
   \item{graph}{The input graph.}
@@ -18,6 +18,13 @@ graph.cohesion(graph)
   \item{target}{The id of the target vertex, for
     \code{vertex.connectivity} it can be \code{NULL}, see details
     below.}
+  \item{checks}{Logical constant. Whether to check that the graph is
+    connected and also the degree of the vertices. If the graph is
+    not (strongly) connected then the connectivity is obviously zero. Otherwise
+    if the minimum degree is one then the vertex connectivity is also
+    one. It is a good idea to perform these checks, as they can be
+    done quickly compared to the connectivity calculation itself. 
+    They were suggested by Peter McMahan, thanks Peter.}
 }
 \details{
   The vertex connectivity of two vertices (\code{source} and
