@@ -1113,19 +1113,23 @@ int igraph_st_vertex_connectivity(const igraph_t *graph,
 				  igraph_integer_t source,
 				  igraph_integer_t target,
 				  igraph_vconn_nei_t neighbors);
-int igraph_vertex_connectivity(const igraph_t *graph, igraph_integer_t *res);
+int igraph_vertex_connectivity(const igraph_t *graph, igraph_integer_t *res,
+			       igraph_bool_t checks);
 int igraph_st_edge_connectivity(const igraph_t *graph, igraph_integer_t *res,
 				igraph_integer_t source, 
 				igraph_integer_t target);
-int igraph_edge_connectivity(const igraph_t *graph, igraph_integer_t *res);
+int igraph_edge_connectivity(const igraph_t *graph, igraph_integer_t *res,
+			     igraph_bool_t checks);
 int igraph_edge_disjoint_paths(const igraph_t *graph, igraph_integer_t *res,
 			       igraph_integer_t source, 
 			       igraph_integer_t target);
 int igraph_vertex_disjoint_paths(const igraph_t *graph, igraph_integer_t *res,
 				 igraph_integer_t source,
 				 igraph_integer_t target);
-int igraph_adhesion(const igraph_t *graph, igraph_integer_t *res);
-int igraph_cohesion(const igraph_t *graph, igraph_integer_t *res);
+int igraph_adhesion(const igraph_t *graph, igraph_integer_t *res,
+		    igraph_bool_t checks);
+int igraph_cohesion(const igraph_t *graph, igraph_integer_t *res,
+		    igraph_bool_t checks);
 
 /* -------------------------------------------------- */
 /* K-Cores                                            */
